Fix: Tighten spacing

--- a/themes/solidaritynz/assets/css/main.css
+++ b/themes/solidaritynz/assets/css/main.css
@@ -32,7 +32,7 @@ body > main {
 	flex-grow: 1;
 }
 
-main { margin: 1rem auto; }
+main { margin: 1rem 0; }
 
 img {
 	max-width: 100%;
